# BiucingCLI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: INSTRUCTION_TEMPLATE.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: ci.yml
config/: biucingcli.yaml
docs/: 0.3.0-plan.md  0.3.0-release-prep.md  0.4.0-plan.md  0.4.0-release-prep.md  0.4.0-template-candidate-selection.md  0.4.0-template-consistency-audit.md  android-team-environment-standard.md  android-template-design.md  apple-android-template-roadmap.md  apple-team-environment-standard.md  backend_stack_documentation.md  cpp_cross_platform_stack_documentation.md  desktop_stack_documentation.md  devops_stack_documentation.md  frontend_stack_documentation.md  harmonyos-team-environment-standard.md  microservice-team-environment-standard.md  microservice-template-design.md  mobile_stack_documentation.md  product-design.md  release-checklist.md  roadmap.md  template-system.md  verification-matrix.md  web-service-team-environment-standard.md
plans/: backend_stack_refinement_plan.md  frontend_stack_plan.md  tech_stack_summary.md
src/biucingcli/: __init__.py  cli.py  config.py  templates.py
src/biucingcli/commands/: __init__.py  backend.py  common.py  desktop.py  devops.py  frontend.py  mobile.py  testing.py
src/biucingcli/data/: __init__.py  defaults.yaml
templates/android/: template.json
templates/android/template/: .editorconfig  .gitignore  .mise.toml  Brewfile  Makefile  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
templates/android/template/app/: build.gradle.kts  proguard-rules.pro
templates/android/template/docs/: release-signing.properties.example
templates/android/template/fastlane/: Appfile  Fastfile
templates/android/template/gradle/: libs.versions.toml
templates/android/template/scripts/: bootstrap  doctor  setup-android-sdk  sync-gradle-wrapper
templates/apple/: template.json
templates/apple/template/: .gitignore  .mise.toml  .swiftformat  .swiftlint.yml  Brewfile  Makefile  README.md  Tuist.swift  Workspace.swift
templates/apple/template/App/: Project.swift
templates/apple/template/fastlane/: Appfile  Fastfile
templates/apple/template/scripts/: bootstrap  doctor  setup-xcode
templates/backend/gin-micro-template/: .gitignore  Makefile  README.md  go.mod  main.go
templates/backend/gin-micro-template/configs/: config.yaml
templates/backend/gin-micro-template/migrations/: 000001_create_users_table.down.sql  000001_create_users_table.up.sql
templates/backend/gin-micro-template/scripts/: init.sh
templates/backend/gin-micro-template/tests/: main_test.go
templates/frontend/: template.json
templates/frontend/react-vite-ts-template/: README.md  package.json  vite.config.ts
templates/frontend/react-vite-ts-template/src/: App.tsx
templates/frontend/template/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.dev.full  Makefile  README.md  compose.dev.yaml  eslint.config.js  package.json  playwright.smoke.config.ts  vite.config.ts
templates/frontend/template/src/: App.test.tsx  App.tsx  index.css
templates/frontend/template/tests/: browser-smoke.spec.ts
templates/harmonyos/: template.json
templates/harmonyos/template/: .gitignore  Makefile  README.md  build-profile.json5  code-linter.json5  oh-package.json5
templates/harmonyos/template/AppScope/: app.json5
templates/harmonyos/template/docs/: release-signing.local.properties.example
templates/harmonyos/template/entry/: build-profile.json5  hvigorfile.ts  oh-package.json5
templates/harmonyos/template/scripts/: bootstrap  doctor  lint  release-build
templates/microservice/: template.json
templates/microservice/template/: .air.toml  .dockerignore  .gitignore  .mise.toml  Brewfile  Dockerfile  Dockerfile.dev  Makefile  README.md  compose.dev.yaml  go.mod  go.sum
templates/microservice/template/api/: buf.gen.yaml
templates/microservice/template/configs/: config.yaml
templates/web/: template.json
templates/web-service/: template.json
templates/web-service/template/: .air.toml  .dockerignore  Brewfile  Dockerfile  Dockerfile.dev  Makefile  README.md  compose.dev.yaml  compose.yaml  go.mod
templates/web/template/: .dockerignore  Dockerfile  Makefile  README.md  go.mod
templates/worker/: template.json
templates/worker/template/: .dockerignore  Dockerfile  Dockerfile.dev  Makefile  README.md  compose.dev.yaml  go.mod
tests/: test_cli.py
tests/golden/: info-web-service.json  info-web-service.txt  list.json  list.txt
(+95 files in other folders)
