[project]
name = "biucingcli"
version = "0.5.0"
description = "A scaffold generator for independent developers built around a stable personal stack."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
biucing = "biucingcli.cli:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
